# snake-oil

./: .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  biome.json  mise.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: github-pages.yml  publish.yaml
.mise-tasks/: build-package  collect-fonts  collect-fonts.py  enumerate-packages  msvcup.bat
src/mandelbrot/: __main__.py  colors.py  domain.py  frame_counter.py  state.py
src/mandelbrot/assets/fonts/liberation_sans/: .gitignore  LiberationSans.ttc
src/mandelbrot/implementations/: numpy_ufunc.py  pure.py
src/mandelbrot/implementations/apple_metal/: __init__.py  mandelbrot.metal  pyproject.toml
src/mandelbrot/implementations/cython/: .gitignore
src/mandelbrot/implementations/cython/cython_direct/: CMakeLists.txt  README.md  __init__.py  _compute.pyx  pyproject.toml  setup.py
src/mandelbrot/implementations/cython/cython_naive/: README.md  __init__.py  _compute.pyx  pyproject.toml  setup.py
src/mandelbrot/implementations/numba/numba_jit/: README.md  __init__.py  pyproject.toml
src/mandelbrot/implementations/nvidia_cuda/: CMakeLists.txt  README.md  __init__.py  mandelbrot.cu  pyproject.toml
src/mandelbrot/implementations/rust/rust_native/: Cargo.toml  README.md  __init__.py  _rust_native.pyi  pyproject.toml
src/mandelbrot/implementations/rust/rust_native/src/: lib.rs
src/presentation/: .gitignore  .pnp.cjs  .yarnrc.yml  index.html  main.js  package.json  vite.config.ts
src/presentation/assets/: atelier-dune-light.css
