[project]
name = "mandelbrot"
version = "0.1.0"
description = "Live deomonstration of the Mandelbrot set to illustrate performance improvements in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorcet>=3.1.0",
    "mandelbrot-implementation-rust-native",
    "mandelbrot-implementations-cython-direct",
    "mandelbrot-implementations-cython-naive",
    "mandelbrot-implementations-numba; platform_python_implementation == 'CPython'",
    "mandelbrot-implementations-nvidia-cuda; (sys_platform == 'linux' or (os_name == 'nt' and (platform_machine == 'x86_64' or platform_machine == 'AMD64'))) and platform_python_implementation == 'CPython'",
    "numpy>=2.2.6",
    "pygame-ce>=2.5.5",
]

[project.optional-dependencies]
profilers = [
    "py-spy",
    "scalene",
]

[project.gui-scripts]
mandelbrot = "mandelbrot.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mandelbrot-implementations-cython-naive = { path = "src/mandelbrot/implementations/cython/cython_naive" }
mandelbrot-implementations-cython-direct = { path = "src/mandelbrot/implementations/cython/cython_direct" }
mandelbrot-implementations-numba = { path = "src/mandelbrot/implementations/numba/numba_jit" }
mandelbrot-implementation-rust-native = { path = "src/mandelbrot/implementations/rust/rust_native" }
mandelbrot-implementations-nvidia-cuda = { path = "src/mandelbrot/implementations/nvidia_cuda" }


[tool.ruff.lint]
select = ["I"]
