[project]
name = "mandelbrot.implementations.cython_direct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
    "Cython>=3.1.1",
]

[build-system]
requires = [
    "hatchling",
    "Cython>=3.1.1",
    "numpy"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "__init__.py",
]

[tool.uv]
cache-keys = [
    {file = "pyproject.toml"},
    {file = "setup.py"},
    {file = "*.pyx"},
]
