[project]
name = "mandelbrot.implementations.cython_naive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = [
    "Cython>=3.1.1",
]

[build-system]
requires = [
    "setuptools >= 77.0.3",
    "Cython>=3.1.1",
    "numpy"
]
build-backend = "setuptools.build_meta"


[tool.uv]
cache-keys = [
    {file = "pyproject.toml"},
    {file = "setup.py"},
    {file = "*.pyx"},
]
