[package]
name = "rust-native"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust_native"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon"] }
num = "0.4.3"
numpy = "0.28.0"
pyo3 = "0.28.2"


[profile.release]
debug = true
lto = true
codegen-units = 1
