[project]
name = "mandelbrot-implementation-rust-native"
dynamic = ["version"]
description = "Madelbrot computed in Rust"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "maturin>=1.9.0",
]
[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]


[tool.uv]
cache-keys = [
    {file = "pyproject.toml"},
    {file = "Cargo.toml" },
    {file = "Cargo.lock" },
    {file = "**/*.rs"},
]
